[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sbn"
description = "Skull, Bones and Number (OTP-CR-117/19)"
version = "92"
authors = [
    {name = "OTP-CR-117/19", email = "skullbonesandnumer@gmail.com" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]

[project.optional-dependencies]
dev = []

[project.scripts]
sbn = "sbn.__main__:wrapped"
sbnd = "sbn.__main__:daemoned"


[project.urls]
"home" = "https://pypi.org/project/sbn"
"bugs" = "https://github.com/bthate/sbn/issues"
"source" = "https://github.com/bthate/sbn"


[tool.setuptools]
packages = [
   "sbn",
   "sbn.modules"
]
zip-safe = true


[tool.setuptools.data-files]
"share/doc/sbn" = [
    "docs/about.rst",
    "docs/arrest.png",
    "docs/conf.py",
    "docs/ECHAhaldol.png",
    "docs/evidence.rst",
    "docs/genocide.png",
    "docs/informed.jpg",
    "docs/OTP1.png",
    "docs/reconsider.rst",
    "docs/skull.jpg",
    "docs/source.rst",
    "docs/verbatim2.png",
    "docs/banner.png",
    "docs/ECHAabilify.png",
    "docs/ECHAzyprexa.png",
    "docs/guilty.rst",
    "docs/kamer.png",
    "docs/OTP2.png",
    "docs/request.rst",
    "docs/skull3.png",
    "docs/verbatim.rst",
    "docs/writings.rst",
    "docs/bevestigd.jpg",
    "docs/ECHAclozapine.png",
    "docs/wallpaper.png",
    "docs/index.rst",
    "docs/manual.rst",
    "docs/wallpaper.png",
]

"share/doc/sbn/_static" = [
    "docs/_static/sbn.css",
]

"share/doc/sbn/pdf" =  [
    "docs/pdf/bevestigd.pdf",
    "docs/pdf/EM_T04_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T07_OTP-CR-117_19_001.pdf",
    "docs/pdf/Kamer.pdf",
    "docs/pdf/Rome-Statute.pdf",
]

"share/doc/sbn/_templates" = [
    "docs/_templates/base.rst",
    "docs/_templates/class.rst",
    "docs/_templates/mine.rst",
    "docs/_templates/module.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
    "env*",
    "html*",
    "test*"
]
